# struc

./: AUTHORS  CMakeLists.txt  README.md
include/: struc.hpp
test/: CMakeLists.txt  test.cpp
